--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "okr",
   "version": "0.0.1",
   "description": "The month okr relevant portal+ team",
-  "productName": "okr_h5",
+  "productName": "okr",
   "cordovaId": "org.cordova.quasar.app",
   "capacitorId": "",
   "author": "luolinjia",
@@ -12,16 +12,16 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "@quasar/extras": "^1.0.0",
+    "@quasar/extras": "^1.9.17",
     "axios": "^0.18.1",
     "less": "^3.0.1",
     "less-loader": "^4.0.6",
-    "quasar": "^1.0.0",
+    "quasar": "^1.15.4",
     "vue-i18n": "^8.0.0",
     "vuelidate": "^0.7.5"
   },
   "devDependencies": {
-    "@quasar/app": "^1.0.0",
+    "@quasar/app": "^1.9.6",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.10.0",
